tests/require/require.exp
Error: require.js:9
  9: takesAString(A.numberValue);
                  ^^^^^^^^^^^^^ Cannot call `takesAString` with `A.numberValue` bound to `str` because number [1] is incompatible with string [2].
  References:
    6: exports.numberValue = 42;
                             ^^ [1]: number. See: ProvidesModuleA.js:6
    4: function takesAString(str: string): void {}
                                  ^^^^^^ [2]: string

Error: require.js:14
 14: takesAString(B.numberValue);
                  ^^^^^^^^^^^^^ Cannot call `takesAString` with `B.numberValue` bound to `str` because number [1] is incompatible with string [2].
  References:
    3: exports.numberValue = 42;
                             ^^ [1]: number. See: B.js:3
    4: function takesAString(str: string): void {}
                                  ^^^^^^ [2]: string

Error: require.js:17
 17: require("C");
             ^^^ C. Required module not found

Error: require.js:20
 20: require("./D");
             ^^^^^ ./D. Required module not found

Error: require.js:25
 25: E.stringValue; // Error: The E exports obj has no 'stringValue' property
       ^^^^^^^^^^^ property `stringValue`. Property not found in
 25: E.stringValue; // Error: The E exports obj has no 'stringValue' property
     ^ object literal

Error: require.js:30
 30: require(a); // Error: Param must be string literal
     ^^^^^^^^^^ The parameter passed to require() must be a literal string.

Error: require.js:32
 32: require(`${'./E'}`); // error: but only if they have no expressions
     ^^^^^^^^^^^^^^^^^^^ The parameter passed to require() must be a literal string.


Found 7 errors
